examples/test/testpolicy19926.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19926
  namespace: namespace320
spec:
  podSelector:
    matchLabels:
      key25: value29
      key37: value29
      key47: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value23
      podSelector:
        matchLabels:
          key3: value32
          key27: value45
          key37: value48
